2004-12-06  Matthias Clasen  <mclasen@redhat.com>

	* modules/input/gtkimcontextime.c: Prevent double commits,
	don't commit when Ctrl is present.  (#160376, Kazuki IWAMOTO)

2004-12-06  Hans Breuer  <hans@breuer.org>

	* gtk/gtkcolorsel.c (key_press): Implement keynav for the color
	picker - win32 too. Fixes bug #160437.

2004-12-05  Tor Lillqvist  <tml@iki.fi>

	* demos/gtk-demo/main.c (load_file): Use g_fopen().

	* demos/gtk-demo/images.c (progressive_timeout): Use
	g_fopen(). Open png file in binary mode.

2004-12-02  Matthias Clasen  <mclasen@redhat.com>
	
	* configure.in: Bump version

	* === Released 2.5.6 ===

	* NEWS: Updates

2004-12-03  Tor Lillqvist  <tml@iki.fi>

	* gdk-pixbuf/Makefile.am (gdk_pixbuf.def)
	* gdk/Makefile.am (gdk.def)
	* gtk/Makefile.am (gtk.def): Work around gcc misfeature. At least
	gcc 3.3.1 doesn't like to do -E on files that it thinks aren't
	source files. Use redirection and '-' instead.

2004-12-02  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_should_respond): 	Reinstate the previous behavior for clicking Ok after
	activating a bookmark or path bar button in folder 
	modes.  (#160044, Dennis Cranston)

2004-12-02  Federico Mena Quintero  <federico@ximian.com>

	Merged from gtk-2-4:

	Fix #159656:

	* gtk/gtkfilechooserdefault.c (PendingOp): New enumeration for the
	pending operation to perform when finishing loading a folder.
	(struct _GtkFileChooserDefault): New fields 'pending_op' and
	'pending_select_path'.
	(pending_op_queue): New utility function.
	(pending_op_process): New utility function.
	(gtk_file_chooser_default_select_path): Don't select the path
	immediately; delay it until the folder is finished loading.
	(browse_files_model_finished_loading_cb): Process the pending
	operation.
	(browse_files_select_first_row): New utility function.
	(gtk_file_chooser_default_initial_focus): Use
	browse_files_select_first_row().