@@ -210,11 +210,14 @@ HTML_IMAGES = \
 	$(srcdir)/images/button.png					\
 	$(srcdir)/images/check-button.png				\
 	$(srcdir)/images/color-button.png				\
+	$(srcdir)/images/colorsel.png					\
 	$(srcdir)/images/combo-box.png					\
 	$(srcdir)/images/combo-box-entry.png				\
 	$(srcdir)/images/entry.png					\
 	$(srcdir)/images/file-button.png				\
+	$(srcdir)/images/filechooser.png				\
 	$(srcdir)/images/font-button.png				\
+	$(srcdir)/images/fontsel.png					\
 	$(srcdir)/images/frame.png					\
 	$(srcdir)/images/icon-view.png					\
 	$(srcdir)/images/image.png					\
